syntax = "proto3";
package auth;

option go_package = "github.com/perlinson/gocraft-server/internal/proto/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int64 expires = 2;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {}